Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -100,7 +100,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +149,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,30 +218,151 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad = 5"
+      ],
       "metadata": {
         "id": "vsHh5buZADND"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(edad)"
+      ],
       "metadata": {
-        "id": "sivPtqSjADQV"
+        "id": "sivPtqSjADQV",
+        "outputId": "2ecc5d84-a083-49b4-eb99-ba545aadb0b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio = 9.5"
+      ],
       "metadata": {
         "id": "JC8jO47wADlm"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(promedio)"
+      ],
+      "metadata": {
+        "id": "UVPLfZVRqVhD",
+        "outputId": "212dddd9-770e-4f53-e38b-7da978dab36a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre = \"Diego\""
+      ],
+      "metadata": {
+        "id": "DZWT9lwGqYeA"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(nombre)"
+      ],
+      "metadata": {
+        "id": "oDPGNyKeqYji",
+        "outputId": "1cc1f738-7b46-4a84-e90e-cd64512c7a0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "V = True"
+      ],
+      "metadata": {
+        "id": "jJdYcRflqnPg"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(V)"
+      ],
+      "metadata": {
+        "id": "EpOTRVb4qne-",
+        "outputId": "f4aead84-b110-43b5-8687-6dee6436b653",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -258,6 +379,36 @@
       "metadata": {
         "id": "om2N0jHKAzwL"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_estudiante = 'Penelope Camacho'\n",
+        "edad_estudiante = 11\n",
+        "promedio_estudiante = 9\n",
+        "aprobado = True\n",
+        "\n",
+        "print(nombre_estudiante,edad_estudiante,promedio_estudiante,aprobado)\n",
+        "print(type(nombre_estudiante),type(edad_estudiante),type(promedio_estudiante),type(aprobado))"
+      ],
+      "metadata": {
+        "id": "MoJ57kW6q7Bo",
+        "outputId": "14d59471-84bd-4a00-eb71-5069a093186e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Penelope Camacho 11 9 True\n",
+            "<class 'str'> <class 'int'> <class 'int'> <class 'bool'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -385,30 +536,128 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "c_vigilante = 5\n",
+        "s_vigilante = 300\n",
+        "\n",
+        "c_docente = 16\n",
+        "s_docente = 500\n",
+        "\n",
+        "c_coordinador = 2\n",
+        "s_coordinador = 600"
+      ],
       "metadata": {
         "id": "F_X-wxdm_5Ys"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "total_empleados = c_vigilante + c_docente + c_coordinador\n",
+        "total_empleados"
+      ],
       "metadata": {
-        "id": "gKmBbhII_5b9"
+        "id": "gKmBbhII_5b9",
+        "outputId": "14bd5b7e-e2d1-4db0-a94b-290cf1e6391d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "diferencia_salario = s_coordinador - s_vigilante\n",
+        "diferencia_salario"
+      ],
       "metadata": {
-        "id": "fIugsxNy_53j"
+        "id": "fIugsxNy_53j",
+        "outputId": "47e298c0-1ccc-46ec-d377-3a712429f24e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "300"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedio_ponderado = (c_vigilante * s_vigilante + c_docente * s_docente + c_coordinador * s_coordinador) / total_empleados\n",
+        "promedio_ponderado"
+      ],
+      "metadata": {
+        "id": "1CxfYkkmtgL-",
+        "outputId": "96629442-613b-48bf-8943-abf3c63fb26b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "465.2173913043478"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(promedio_ponderado)"
+      ],
+      "metadata": {
+        "id": "Bw_71zaYuKsb",
+        "outputId": "fa2dbceb-2b52-4b80-bc74-6299551972e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
