Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2486,11 +2486,11 @@
         "  print(\"No se puede formar un triángulo.\")"
       ],
       "metadata": {
-        "id": "yOVYcrePInUq",
-        "outputId": "b2b6968c-99c4-4447-e159-6f20d1b42b6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yOVYcrePInUq",
+        "outputId": "b2b6968c-99c4-4447-e159-6f20d1b42b6e"
       },
       "execution_count": 114,
       "outputs": [
@@ -2551,11 +2551,11 @@
         "print(f'El valor total a pagar por el cliente es: {valor_a_pagar}')"
       ],
       "metadata": {
-        "id": "7gOC1zKBJlnW",
-        "outputId": "c4e91794-9fe6-416b-f532-275dfcfa0d2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7gOC1zKBJlnW",
+        "outputId": "c4e91794-9fe6-416b-f532-275dfcfa0d2f"
       },
       "execution_count": 116,
       "outputs": [
@@ -2605,11 +2605,11 @@
         "  print('Recorte de gastos.')"
       ],
       "metadata": {
-        "id": "JGpOwWgkLomG",
-        "outputId": "02653a27-2c8a-47d7-d1f0-59f0f2a1c917",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JGpOwWgkLomG",
+        "outputId": "02653a27-2c8a-47d7-d1f0-59f0f2a1c917"
       },
       "execution_count": 121,
       "outputs": [
@@ -2647,12 +2647,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota_1 = float(input('Escribe la nota 1: '))\n",
+        "nota_2 = float(input('Escribe la nota 2: '))\n",
+        "print(f'El promedio del estudiante 1 es: {(nota_1 + nota_2) / 2}')\n",
+        "\n",
+        "nota_1 = float(input('Escribe la nota 1: '))\n",
+        "nota_2 = float(input('Escribe la nota 2: '))\n",
+        "print(f'El promedio del estudiante 2 es: {(nota_1 + nota_2) / 2}')\n",
+        "\n",
+        "nota_1 = float(input('Escribe la nota 1: '))\n",
+        "nota_2 = float(input('Escribe la nota 2: '))\n",
+        "print(f'El promedio del estudiante 3 es: {(nota_1 + nota_2) / 2}')"
+      ],
       "metadata": {
-        "id": "xcx21IGT9qA0"
+        "id": "xcx21IGT9qA0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "20dd6070-945e-401e-b2de-276f0846b1bf"
       },
-      "execution_count": 47,
-      "outputs": []
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Escribe la nota 1: 6.5\n",
+            "Escribe la nota 2: 8.5\n",
+            "El promedio del estudiante 1 es: 7.5\n",
+            "Escribe la nota 1: 8.3\n",
+            "Escribe la nota 2: 9\n",
+            "El promedio del estudiante 2 es: 8.65\n",
+            "Escribe la nota 1: 10\n",
+            "Escribe la nota 2: 6\n",
+            "El promedio del estudiante 3 es: 8.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
