Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2753,10 +2753,10 @@
       ],
       "metadata": {
         "id": "Hd0ZSWxD9wCD",
-        "outputId": "b5620e47-0d41-48a9-c137-24940c12b468",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b5620e47-0d41-48a9-c137-24940c12b468"
       },
       "execution_count": 3,
       "outputs": [
@@ -2809,10 +2809,10 @@
       ],
       "metadata": {
         "id": "9T5eCLFx9wk6",
-        "outputId": "2353f145-0b92-473d-9c25-49f8b4b89222",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2353f145-0b92-473d-9c25-49f8b4b89222"
       },
       "execution_count": 4,
       "outputs": [
@@ -2895,10 +2895,10 @@
       ],
       "metadata": {
         "id": "KkL1wUIj9jL4",
-        "outputId": "a81ea4d1-24ee-438e-e917-f010ddbdd7ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a81ea4d1-24ee-438e-e917-f010ddbdd7ed"
       },
       "execution_count": 5,
       "outputs": [
@@ -2930,10 +2930,10 @@
       ],
       "metadata": {
         "id": "uXIZnLSr9jOu",
-        "outputId": "79f18bb2-972a-4d8f-88dd-d6c79870fadb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "79f18bb2-972a-4d8f-88dd-d6c79870fadb"
       },
       "execution_count": 8,
       "outputs": [
@@ -2950,6 +2950,63 @@
             "Escribe la nota 1: 9.1\n",
             "Escribe la nota 2: 9.5\n",
             "El promedio del estudiante es: 9.3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1, 6):\n",
+        "    if i == 4:\n",
+        "        continue\n",
+        "    print(i)\n"
+      ],
+      "metadata": {
+        "id": "A9kh4DhwFObk",
+        "outputId": "ae0307ea-93a3-49d2-d1ff-76fe4039d7f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1, 6):\n",
+        "    if i == 4:\n",
+        "        break\n",
+        "    print(i)\n"
+      ],
+      "metadata": {
+        "id": "BdhyIYeNFWwl",
+        "outputId": "0b8c6733-49fe-4c61-8d26-73e0299c0396",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
           ]
         }
       ]
